# shppy

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test.ipynb  test.py
.github/workflows/: pip.yml  wheels.yml
shppy/: __init__.py  cli.py  shell.py  utils.py
shppy/_core/: __init__.pyi
shppy/atom/: __init__.py  basic.py  topo.py
shppy/io/: __init__.py  espresso.py  lammps.py  slurm.py  vasp.py
shppy/tools/: __init__.py  inputs.py  job.py  s2s.py
shppy/tui/: __init__.py  helper.py  prompts.py
src/: bindings.cpp
tests/: test_espresso.py  test_shell.py
tests/data/espresso/: test.in
tests/data/slurm/: job.sh
tools/: fill-H.py  find-ring.py
