[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "Shppy"
dependencies = ["ase", "numpy", "scipy", "networkx", "plotext", "xmltodict"]
dynamic = ["version"]
description="A tool library for the Chon-Hei Lo's research"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Season Lo", email = "chlo-mo@outlook.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pytest",
]


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["shppy"]

[tool.scikit-build.cmake.define]
EXTRA_COMPILE_OPTIONS = ""

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
skip = "*win32 *-manylinux_i686 *-musllinux_* pp*"

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra"]