[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "Shppy"
dependencies = [
  "ase",
  "numpy",
  "scipy",
  "networkx",
  "plotext",
  "xmltodict",
  "typer[all]",
  "prompt_toolkit",
]
dynamic = ["version"]
description="A tool library for the Chon-Hei Lo's research"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Season Lo", email = "chlo-mo@outlook.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.scripts]
shppy = "shppy.cli:app"

[dependency-groups]
dev = [
    "pytest",
]


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["shppy"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.scikit-build.cmake.define]
EXTRA_COMPILE_OPTIONS = ""

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra"]
